reduce font size to fix 4 digit numbers overflowing visually...

--- a/determinant/style.css
+++ b/determinant/style.css
@@ -49,7 +49,7 @@
     }
 }
 #det-calc-steps {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-top: 20px;
     font-weight: bold;
     font-family: monospace;
